--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "axios-hooks": "^2.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
